--- a/css/nightfall.optional.css
+++ b/css/nightfall.optional.css
@@ -429,4 +429,4 @@ small {
 .f-clear {
   clear: both;
 }
-/*# sourceMappingURL=nightfall.css.map */
+/*# sourceMappingURL=nightfall.optional.css.map */
